--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -73,6 +77,12 @@
 <h5><a href='https://jobs.smartrecruiters.com/Vichara/743999692086047-full-stack-net-developer-financial-services'>Vichara Full Stack .NET Developer - Financial Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
+<hr/>
+<h5><a href='https://pae.wd1.myworkdayjobs.com/PAE_Careers/job/US-DC-Washington/Full-Stack-Developer_R0036236-2'>Full Stack Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Full Stack Developer. Macfadden, now part of PAE, is seeking a Drupal Web 
+Developer to support USAID's Office of Transition Initiatives (OTI). In this position
+?...</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/scout24/jobs/1785556'>Job Application for Senior Fullstack Engineer - Scala - Private Seller (m/w/d) at Scout24</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -138,7 +148,7 @@ Rochester School is a private school focused on environmental sustainability and
 Specifically, we're looking for experienced developers to work on VERY 
 interesting?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nicesystems/job/ofMsafwn'>NICE Careers - Senior Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Senior Full Stack Developer. R&D / Engineering Raanana, Israel Job Number: 
 8347. Apply. Position at NICE. Responsibilities: Design and develop quality,?...</p>
@@ -153,7 +163,7 @@ Stack Developer to join our digital delivery team as they build a solution for a
 <p>Jul 14, 2019 ... Express your creativity in Developer Choice competitions, with the opportunity to 
 win prizes and recognition from your peers. Required Qualifications: Minimum 3?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -171,7 +181,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/BrqDFRjGX2/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/BrqDFRjGX2/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -203,7 +213,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
+<h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -215,7 +225,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
+<h5><a href='https://relocately.join.com/jobs/264223-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -263,7 +273,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Toronto Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://moduscreate.applytojob.com/apply/lafU8gAClm/Full-Stack-Developer-ReactJS-GraphQL-NodeJSMultiple-Countries'>Full Stack Developer (ReactJS ,GraphQL, NodeJS)-Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
+<h5><a href='http://moduscreate.applytojob.com/apply/lafU8gAClm/Full-Stack-Developer-ReactJS-GraphQL-NodeJSMultiple-Countries'>Full Stack Developer (ReactJS ,GraphQL, NodeJS)-Multiple Countries - Modus Create, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -324,7 +334,7 @@ the job details and apply today!</p>
 <p><span class="badge badge-light">San Francisco Mountain View Vancouver Toronto London Paris Berlin Denver Canada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999692146692-pdm-full-stack-engineer'>Aroghia Group PDM Full Stack Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -376,7 +386,7 @@ a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?..
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1785715'>Job Application for Full-Stack Engineer, Hosting Task Force at Vimeo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1785715'>Job Application for Full-Stack Engineer, Hosting Task Force at Vimeo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Video accounts for some 80% of today's global Internet traffic. Vimeo's Video 
 hosting stack enables high quality experience to our creators and viewers.</p>
@@ -440,7 +450,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dharma/jobs/4364921002'>Job Application for Full Stack Engineer at Dharma</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dharma/jobs/4364921002'>Job Application for Full Stack Engineer at Dharma</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -467,14 +477,6 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <h5><a href='https://jobs.smartrecruiters.com/GlobalTravelSolutionsGTSAG/743999684997845-senior-full-stack-developer-team-leader-f-m'>Global Travel Solutions GTS AG Senior Full-Stack Developer - Team Leader f/m | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/pe/job/opEwafwt'>Productive Edge Careers - Full Stack Developer - Azure</a></h5> 
-<p><span class="badge badge-light">Chicago Boston</span></p>
-<p>Posted on: 2019-07-21</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDA9Vfw1&k=Job&j=o8LV9fwH&__jvst=Employee+Referral&__jvsd=sGs68hw8&__jvsc=Twitter&bid=ndpzPKwf'>HotSchedules Careers - Sr. Full Stack Engineer</a></h5> 
-<p><span class="badge badge-light">Austin</span></p>
-<p>Posted on:: 2019-07-21</p>
 <hr/>
 
 
